Fix input overflowing and hiding send button on mobile

--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ body {
     padding: 10px;
     outline: none;
     font-size: 1rem;
+    min-width: 0; /* <- Shu qator muhim, telefonda input qisqara olishi uchun */
 }
 
 /* File Preview */
